[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "iterative-dbscan"
version = "0.1.0"
description = "Iterative DBSCAN with silhouette-guided recursive refinement (LENTA algorithm, packaged for modern use)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Andrea Morichetta", email = "andrea.morichetta@tuwien.ac.at" },
]
keywords = ["clustering", "dbscan", "silhouette", "unsupervised", "anomaly-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.5",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/AndreaMorichetta/iterative-dbscan"
Issues = "https://github.com/AndreaMorichetta/iterative-dbscan/issues"
Paper = "https://ieeexplore.ieee.org/document/8493073"

[tool.hatch.build.targets.wheel]
packages = ["src/iterative_dbscan"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RET"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
